Deluge 0.5.7.1 (31 November 2007)
  * Increase tracker timeout
  * Fixed crash and corruption of persistent.state while adding a duplicate 
  torrent.  Also caused yet another invalid handle error.

Deluge 0.5.7 (26 November 2007)
  * Scrape support
  * Manual force-recheck
  * Add local peer discovery (aka local service discovery)
  * Blocklist plugin will now display errors, instead of just crashing on a bad
  list or wrong type
  * Add torrent in paused state option
  * Add advanced progress bar
  * Fix bug in merging trackers
  * Various updates to WebUI, including https support and advanced template by vonck7
  * Add maximum connection attempts per second preference
  * Fix bug where loaded plugins were forgotten if Deluge crashed
  * Fix ratio bugs (hopefully for the last time)
  * Add preference to only show file selection popup if torrent has multiple files
  * Fix pause all and resume all bugs
  * Fix client not loading if our website goes down (new version check failing)
  * Allow torrent creation with no trackers
  * Scheduler plugin revamp by Ben Klein
  * Fix ETA from going backwards
  * UI warning on full HD - no longer just silently pauses torrents
  * Replace SimpleRSS with FlexRSS
  * Add preference for the location of torrent files
  * Add autoload folder
  * Copy translator credits from Launchpad to our about->credits
  * Differentiate between queued and paused torrents.  Able to pause queued 
  torrents - patch by yobbobandana
  * Show error when writing/permission problems occur

Deluge 0.5.6.2 (31 October 2007)
  * Set default piece size to 256-KiB in TorrentCreator plugin and add 2048KiB
  as a size option.
  * Fix a bug in Debian package that caused the UI to completely freeze when a 
  torrent finished
  * Find and fix another shutdown bug that mostly Gutsy users were incountering
  * Fix a couple of WebUI bugs, including the "index" page erroring out

Deluge 0.5.6.1 (28 October 2007)
  * Fix invalid handle error
  * Fix shutdown hang
